fix styles overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,9 @@
   display: block;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
-  .main {
+  .content {
     width: 100%;
     height: 100%;
     position: relative;
@@ -11,14 +12,14 @@
 
   img {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 1000px;
+    height: auto;
   }
 
   .firekeeper {
     position: absolute;
-    bottom: 14%;
-    left: 20px;
+    bottom: 28%;
+    left: 16%;
     width: 64px;
     height: auto;
     object-fit: contain;
